[gd_scene load_steps=10 format=3 uid="uid://bvun2dcn47408"]

[ext_resource type="Theme" uid="uid://cptxnpii13ops" path="res://scenes/ui/game_ui_theme.tres" id="1_2yiqu"]
[ext_resource type="Script" uid="uid://bk77lh4s8c5b4" path="res://scenes/ui/tools_panel.gd" id="2_0jxvs"]
[ext_resource type="Texture2D" uid="uid://drr2r5k73luv7" path="res://assets/icons/no_outline/tool_icons_NO_outline.png" id="3_0jxvs"]
[ext_resource type="Texture2D" uid="uid://cjvqc8l1ybo7n" path="res://assets/icons/no_outline/food_icons_NO_outline.png" id="4_0jxvs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0jxvs"]
atlas = ExtResource("3_0jxvs")
region = Rect2(49, 2, 14, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6726"]
atlas = ExtResource("3_0jxvs")
region = Rect2(81, 2, 14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur6ba"]
atlas = ExtResource("3_0jxvs")
region = Rect2(98, 3, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdu3n"]
atlas = ExtResource("4_0jxvs")
region = Rect2(19, 50, 10, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_icge2"]
atlas = ExtResource("4_0jxvs")
region = Rect2(16, 64, 16, 16)

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 226.0
offset_bottom = 56.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_2yiqu")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_0jxvs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_0jxvs")
icon_alignment = 1
expand_icon = true

[node name="ToolTilling" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_a6726")
expand_icon = true

[node name="ToolWateringCan" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_ur6ba")
icon_alignment = 1
expand_icon = true

[node name="ToolWheat" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_bdu3n")
icon_alignment = 1
expand_icon = true

[node name="ToolTomato" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_icge2")
icon_alignment = 1
expand_icon = true

[connection signal="button_down" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/ToolTilling" to="." method="_on_tool_tilling_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/ToolWateringCan" to="." method="_on_tool_watering_can_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/ToolWheat" to="." method="_on_tool_wheat_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/ToolTomato" to="." method="_on_tool_tomato_button_down"]
